Feature/add t bool test (#628)
* add TBoolTest (mix of TStringTest and NumericTypesTestBase)

* minor cleanup

* add copyright comment, fix comment in test

* make class and test methods public to be aligned with other tests

* fix formatting with mvn spotless:apply

---------

Co-authored-by: Winfried Gerlach <w.schoech@gmail.com>